adding some unit tests for demo purposes